@@ -375,6 +375,15 @@ test_that("make_standata returns data for bsts models", {
   expect_equivalent(make_standata(bf(y~1, sigma ~ 1), data = dat, 
                                   autocor = cor_bsts(~t|g))$X_sigma[, 1],
                     rep(1, nrow(dat)))
+  
+  dat = data.frame(
+    y = rnorm(100), id = rep(1:10, each = 1),
+    day = rep(1:10, length.out = 100) 
+  )
+  expect_error(
+    make_standata(y~1, dat, autocor = cor_bsts(~day|id)),
+    "Time points within groups must be unique"
+  )
 })
 
 test_that("make_standata returns data for GAMMs", {
